--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
         <h1>You are my sunshine</h1>
         <p><a href="https://www.youtube.com/watch?v=2cBzMSPYKas" target="_blank">Assista no Youtube</a></p>
     </header>
-  
+
     <section class="normal">
         <p>
             The other night dear, as I lay sleeping <br>
@@ -27,7 +27,7 @@
         </p>
     </section>
     
-    <section class="image">
+    <section class="image" id="img01">
         <p>
             I'll always love you and make you happy, <br>
             If you will only say the same. <br>
@@ -53,7 +53,7 @@
         </p>
     </section>
 
-    <section class="image">
+    <section class="image" id="img02">
         <p>
             In all my dreams, dear, you seem to leave me <br>
             When I awake my poor heart pains. <br>
